[project]
name = "deploytracker"
version = "0.1.0"
description = "Deployment tracking service — records deployments across regions with timestamps and metadata"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
